generated/parser.out
Grammar

Rule 0     S' -> program
Rule 1     new_scope -> <empty>
Rule 2     program -> NEWLINE program
Rule 3     program -> statement ; NEWLINE
Rule 4     program -> statement NEWLINE
Rule 5     program -> statement ; program
Rule 6     program -> statement NEWLINE program
Rule 7     programBlock -> { new_scope program }
Rule 8     programBlock -> NEWLINE programBlock
Rule 9     caseProgram -> : new_scope program
Rule 10    programStatement -> statement
Rule 11    statement -> NEWLINE statement
Rule 12    statement -> assignation
Rule 13    statement -> structure
Rule 14    statement -> structureIf
Rule 15    statement -> structureTernary
Rule 16    statement -> logStatement
Rule 17    statement -> breakStatement
Rule 18    statement -> continueStatement
Rule 19    statement -> functionDeclaration
Rule 20    statement -> functionCall
Rule 21    statement -> returnStatement
Rule 22    statement -> varList
Rule 23    structureIf -> IF ( condition ) programStatement NEWLINE
Rule 24    structureIf -> IF ( condition ) programBlock
Rule 25    structureElse -> ELSE programStatement
Rule 26    structureElse -> ELSE programBlock
Rule 27    structure -> structureIf structureElse
Rule 28    structureTernary -> condition ? returnValues : returnValues
Rule 29    structure -> FOR new_scope ( assignation ; condition ; assignation ) programBlock
Rule 30    structure -> FOR new_scope ( assignation ; condition ; assignation ) programStatement
Rule 31    structure -> WHILE ( condition ) programStatement
Rule 32    structure -> WHILE ( condition ) programBlock
Rule 33    structure -> DO programBlock WHILE ( condition )
Rule 34    structure -> DO programStatement NEWLINE WHILE ( condition )
Rule 35    structure -> SWITCH ( IDENTIFIER ) { new_scope caseList }
Rule 36    structure -> SWITCH ( IDENTIFIER ) { }
Rule 37    caseList -> NEWLINE caseList
Rule 38    caseStructure -> CASE expression caseProgram
Rule 39    caseList -> caseStructure
Rule 40    caseStructure -> DEFAULT caseProgram
Rule 41    caseList -> caseList NEWLINE caseStructure
Rule 42    caseList -> caseList caseStructure
Rule 43    conditionSymbol -> LT
Rule 44    conditionSymbol -> GT
Rule 45    conditionSymbol -> LTE
Rule 46    conditionSymbol -> GTE
Rule 47    conditionSymbol -> EQUALV
Rule 48    conditionSymbol -> EQUALVT
Rule 49    conditionSymbol -> NOTEQUALV
Rule 50    conditionSymbol -> NOTEQUALVT
Rule 51    condition -> ! condition
Rule 52    condition -> condition AND condition
Rule 53    condition -> condition OR condition
Rule 54    condition -> expression conditionSymbol expression
Rule 55    condition -> ( condition )
Rule 56    breakStatement -> BREAK
Rule 57    continueStatement -> CONTINUE
Rule 58    logStatement -> LOG ( returnValues )
Rule 59    varCreation -> VAR IDENTIFIER
Rule 60    varCreation -> LET IDENTIFIER
Rule 61    varList -> varCreation
Rule 62    varList -> varList , IDENTIFIER
Rule 63    arrayDeclaration -> [ ]
Rule 64    arrayDeclaration -> [ tokenList ]
Rule 65    tokenList -> IDENTIFIER
Rule 66    tokenList -> NUMBER
Rule 67    tokenList -> tokenList , IDENTIFIER
Rule 68    tokenList -> tokenList , NUMBER
Rule 69    expression -> IDENTIFIER [ NUMBER ]
Rule 70    expression -> NUMBER
Rule 71    expression -> IDENTIFIER
Rule 72    expression -> ( expression )
Rule 73    expression -> expression ADD_OP expression
Rule 74    expression -> expression MUL_OP expression
Rule 75    expression -> ADD_OP expression
Rule 76    assignation -> IDENTIFIER ADD_OP = expression
Rule 77    assignation -> IDENTIFIER MUL_OP = expression
Rule 78    assignation -> IDENTIFIER ADD_OP = functionCall
Rule 79    assignation -> IDENTIFIER MUL_OP = functionCall
Rule 80    assignation -> IDENTIFIER ADD_OP ADD_OP
Rule 81    assignation -> IDENTIFIER = returnValues
Rule 82    assignation -> varList = returnValues
Rule 83    assignation -> varList = structureTernary
Rule 84    functionDeclaration -> FUNCTION IDENTIFIER ( new_scope argList ) programBlock
Rule 85    functionDeclaration -> FUNCTION IDENTIFIER ( ) programBlock
Rule 86    argList -> IDENTIFIER
Rule 87    argList -> argList , IDENTIFIER
Rule 88    functionCall -> IDENTIFIER ( expressionList )
Rule 89    functionCall -> IDENTIFIER ( )
Rule 90    expressionList -> expression
Rule 91    expressionList -> expressionList , expression
Rule 92    returnStatement -> RETURN
Rule 93    returnStatement -> RETURN returnValues
Rule 94    returnStatement -> RETURN condition
Rule 95    returnValues -> expression
Rule 96    returnValues -> arrayDeclaration
Rule 97    returnValues -> functionCall

Terminals, with rules where they appear

!                    : 51
(                    : 23 24 29 30 31 32 33 34 35 36 55 58 72 84 85 88 89
)                    : 23 24 29 30 31 32 33 34 35 36 55 58 72 84 85 88 89
,                    : 62 67 68 87 91
:                    : 9 28
;                    : 3 5 29 29 30 30
=                    : 76 77 78 79 81 82 83
?                    : 28
ADD_OP               : 73 75 76 78 80 80
AND                  : 52
BREAK                : 56
CASE                 : 38
CONTINUE             : 57
DEFAULT              : 40
DO                   : 33 34
ELSE                 : 25 26
EQUALV               : 47
EQUALVT              : 48
FOR                  : 29 30
FUNCTION             : 84 85
GT                   : 44
GTE                  : 46
IDENTIFIER           : 35 36 59 60 62 65 67 69 71 76 77 78 79 80 81 84 85 86 87 88 89
IF                   : 23 24
LET                  : 60
LOG                  : 58
LT                   : 43
LTE                  : 45
MUL_OP               : 74 77 79
NEWLINE              : 2 3 4 6 8 11 23 34 37 41
NOTEQUALV            : 49
NOTEQUALVT           : 50
NUMBER               : 66 68 69 70
OR                   : 53
RETURN               : 92 93 94
SWITCH               : 35 36
VAR                  : 59
WHILE                : 31 32 33 34
[                    : 63 64 69
]                    : 63 64 69
error                : 
{                    : 7 35 36
}                    : 7 35 36

Nonterminals, with rules where they appear

argList              : 84 87
arrayDeclaration     : 96
assignation          : 12 29 29 30 30
breakStatement       : 17
caseList             : 35 37 41 42
caseProgram          : 38 40
caseStructure        : 39 41 42
condition            : 23 24 28 29 30 31 32 33 34 51 52 52 53 53 55 94
conditionSymbol      : 54
continueStatement    : 18
expression           : 38 54 54 72 73 73 74 74 75 76 77 90 91 95
expressionList       : 88 91
functionCall         : 20 78 79 97
functionDeclaration  : 19
logStatement         : 16
new_scope            : 7 9 29 30 35 84
program              : 2 5 6 7 9 0
programBlock         : 8 24 26 29 32 33 84 85
programStatement     : 23 25 30 31 34
returnStatement      : 21
returnValues         : 28 28 58 81 82 93
statement            : 3 4 5 6 10 11
structure            : 13
structureElse        : 27
structureIf          : 14 27
structureTernary     : 15 83
tokenList            : 64 67 68
varCreation          : 61
varList              : 22 62 82 83

Parsing method: LALR

state 0

    (0) S' -> . program
    (2) program -> . NEWLINE program
    (3) program -> . statement ; NEWLINE
    (4) program -> . statement NEWLINE
    (5) program -> . statement ; program
    (6) program -> . statement NEWLINE program
    (11) statement -> . NEWLINE statement
    (12) statement -> . assignation
    (13) statement -> . structure
    (14) statement -> . structureIf
    (15) statement -> . structureTernary
    (16) statement -> . logStatement
    (17) statement -> . breakStatement
    (18) statement -> . continueStatement
    (19) statement -> . functionDeclaration
    (20) statement -> . functionCall
    (21) statement -> . returnStatement
    (22) statement -> . varList
    (76) assignation -> . IDENTIFIER ADD_OP = expression
    (77) assignation -> . IDENTIFIER MUL_OP = expression
    (78) assignation -> . IDENTIFIER ADD_OP = functionCall
    (79) assignation -> . IDENTIFIER MUL_OP = functionCall
    (80) assignation -> . IDENTIFIER ADD_OP ADD_OP
    (81) assignation -> . IDENTIFIER = returnValues
    (82) assignation -> . varList = returnValues
    (83) assignation -> . varList = structureTernary
    (27) structure -> . structureIf structureElse
    (29) structure -> . FOR new_scope ( assignation ; condition ; assignation ) programBlock
    (30) structure -> . FOR new_scope ( assignation ; condition ; assignation ) programStatement
    (31) structure -> . WHILE ( condition ) programStatement
    (32) structure -> . WHILE ( condition ) programBlock
    (33) structure -> . DO programBlock WHILE ( condition )
    (34) structure -> . DO programStatement NEWLINE WHILE ( condition )
    (35) structure -> . SWITCH ( IDENTIFIER ) { new_scope caseList }
    (36) structure -> . SWITCH ( IDENTIFIER ) { }
    (23) structureIf -> . IF ( condition ) programStatement NEWLINE
    (24) structureIf -> . IF ( condition ) programBlock
    (28) structureTernary -> . condition ? returnValues : returnValues
    (58) logStatement -> . LOG ( returnValues )
    (56) breakStatement -> . BREAK
    (57) continueStatement -> . CONTINUE
    (84) functionDeclaration -> . FUNCTION IDENTIFIER ( new_scope argList ) programBlock
    (85) functionDeclaration -> . FUNCTION IDENTIFIER ( ) programBlock
    (88) functionCall -> . IDENTIFIER ( expressionList )
    (89) functionCall -> . IDENTIFIER ( )
    (92) returnStatement -> . RETURN
    (93) returnStatement -> . RETURN returnValues
    (94) returnStatement -> . RETURN condition
    (61) varList -> . varCreation
    (62) varList -> . varList , IDENTIFIER
    (51) condition -> . ! condition
    (52) condition -> . condition AND condition
    (53) condition -> . condition OR condition
    (54) condition -> . expression conditionSymbol expression
    (55) condition -> . ( condition )
    (59) varCreation -> . VAR IDENTIFIER
    (60) varCreation -> . LET IDENTIFIER
    (69) expression -> . IDENTIFIER [ NUMBER ]
    (70) expression -> . NUMBER
    (71) expression -> . IDENTIFIER
    (72) expression -> . ( expression )
    (73) expression -> . expression ADD_OP expression
    (74) expression -> . expression MUL_OP expression
    (75) expression -> . ADD_OP expression

    NEWLINE         shift and go to state 2
    IDENTIFIER      shift and go to state 15
    FOR             shift and go to state 18
    WHILE           shift and go to state 21
    DO              shift and go to state 22
    SWITCH          shift and go to state 23
    IF              shift and go to state 24
    LOG             shift and go to state 25
    BREAK           shift and go to state 26
    CONTINUE        shift and go to state 27
    FUNCTION        shift and go to state 28
    RETURN          shift and go to state 29
    !               shift and go to state 31
    (               shift and go to state 19
    VAR             shift and go to state 32
    LET             shift and go to state 33
    NUMBER          shift and go to state 34
    ADD_OP          shift and go to state 16

    program                        shift and go to state 1
    statement                      shift and go to state 3
    assignation                    shift and go to state 4
    structure                      shift and go to state 5
    structureIf                    shift and go to state 6
    structureTernary               shift and go to state 7
    logStatement                   shift and go to state 8
    breakStatement                 shift and go to state 9
    continueStatement              shift and go to state 10
    functionDeclaration            shift and go to state 11
    functionCall                   shift and go to state 12
    returnStatement                shift and go to state 13
    varList                        shift and go to state 14
    expression                     shift and go to state 17
    condition                      shift and go to state 20
    varCreation                    shift and go to state 30

state 1

    (0) S' -> program .



state 2

    (2) program -> NEWLINE . program
    (11) statement -> NEWLINE . statement
    (2) program -> . NEWLINE program
    (3) program -> . statement ; NEWLINE
    (4) program -> . statement NEWLINE
    (5) program -> . statement ; program
    (6) program -> . statement NEWLINE program
    (11) statement -> . NEWLINE statement
    (12) statement -> . assignation
    (13) statement -> . structure
    (14) statement -> . structureIf
    (15) statement -> . structureTernary
    (16) statement -> . logStatement
    (17) statement -> . breakStatement
    (18) statement -> . continueStatement
    (19) statement -> . functionDeclaration
    (20) statement -> . functionCall
    (21) statement -> . returnStatement
    (22) statement -> . varList
    (76) assignation -> . IDENTIFIER ADD_OP = expression
    (77) assignation -> . IDENTIFIER MUL_OP = expression
    (78) assignation -> . IDENTIFIER ADD_OP = functionCall
    (79) assignation -> . IDENTIFIER MUL_OP = functionCall
    (80) assignation -> . IDENTIFIER ADD_OP ADD_OP
    (81) assignation -> . IDENTIFIER = returnValues
    (82) assignation -> . varList = returnValues
    (83) assignation -> . varList = structureTernary
    (27) structure -> . structureIf structureElse
    (29) structure -> . FOR new_scope ( assignation ; condition ; assignation ) programBlock
    (30) structure -> . FOR new_scope ( assignation ; condition ; assignation ) programStatement
    (31) structure -> . WHILE ( condition ) programStatement
    (32) structure -> . WHILE ( condition ) programBlock
    (33) structure -> . DO programBlock WHILE ( condition )
    (34) structure -> . DO programStatement NEWLINE WHILE ( condition )
    (35) structure -> . SWITCH ( IDENTIFIER ) { new_scope caseList }
    (36) structure -> . SWITCH ( IDENTIFIER ) { }
    (23) structureIf -> . IF ( condition ) programStatement NEWLINE
    (24) structureIf -> . IF ( condition ) programBlock
    (28) structureTernary -> . condition ? returnValues : returnValues
    (58) logStatement -> . LOG ( returnValues )
    (56) breakStatement -> . BREAK
    (57) continueStatement -> . CONTINUE
    (84) functionDeclaration -> . FUNCTION IDENTIFIER ( new_scope argList ) programBlock
    (85) functionDeclaration -> . FUNCTION IDENTIFIER ( ) programBlock
    (88) functionCall -> . IDENTIFIER ( expressionList )
    (89) functionCall -> . IDENTIFIER ( )
    (92) returnStatement -> . RETURN
    (93) returnStatement -> . RETURN returnValues
    (94) returnStatement -> . RETURN condition
    (61) varList -> . varCreation
    (62) varList -> . varList , IDENTIFIER
    (51) condition -> . ! condition
    (52) condition -> . condition AND condition
    (53) condition -> . condition OR condition
    (54) condition -> . expression conditionSymbol expression
    (55) condition -> . ( condition )
    (59) varCreation -> . VAR IDENTIFIER
    (60) varCreation -> . LET IDENTIFIER
    (69) expression -> . IDENTIFIER [ NUMBER ]
    (70) expression -> . NUMBER
    (71) expression -> . IDENTIFIER
    (72) expression -> . ( expression )
    (73) expression -> . expression ADD_OP expression
    (74) expression -> . expression MUL_OP expression
    (75) expression -> . ADD_OP expression

    NEWLINE         shift and go to state 2
    IDENTIFIER      shift and go to state 15
    FOR             shift and go to state 18
    WHILE           shift and go to state 21
    DO              shift and go to state 22
    SWITCH          shift and go to state 23
    IF              shift and go to state 24
    LOG             shift and go to state 25
    BREAK           shift and go to state 26
    CONTINUE        shift and go to state 27
    FUNCTION        shift and go to state 28
    RETURN          shift and go to state 29
    !               shift and go to state 31
    (               shift and go to state 19
    VAR             shift and go to state 32
    LET             shift and go to state 33
    NUMBER          shift and go to state 34
    ADD_OP          shift and go to state 16

    program                        shift and go to state 35
    statement                      shift and go to state 36
    assignation                    shift and go to state 4
    structure                      shift and go to state 5
    structureIf                    shift and go to state 6
    structureTernary               shift and go to state 7
    logStatement                   shift and go to state 8
    breakStatement                 shift and go to state 9
    continueStatement              shift and go to state 10
    functionDeclaration            shift and go to state 11
    functionCall                   shift and go to state 12
    returnStatement                shift and go to state 13
    varList                        shift and go to state 14
    expression                     shift and go to state 17
    condition                      shift and go to state 20
    varCreation                    shift and go to state 30

state 3

    (3) program -> statement . ; NEWLINE
    (4) program -> statement . NEWLINE
    (5) program -> statement . ; program
    (6) program -> statement . NEWLINE program

    ;               shift and go to state 37
    NEWLINE         shift and go to state 38


state 4

    (12) statement -> assignation .

    ;               reduce using rule 12 (statement -> assignation .)
    NEWLINE         reduce using rule 12 (statement -> assignation .)


state 5

    (13) statement -> structure .

    ;               reduce using rule 13 (statement -> structure .)
    NEWLINE         reduce using rule 13 (statement -> structure .)


state 6

    (14) statement -> structureIf .
    (27) structure -> structureIf . structureElse
    (25) structureElse -> . ELSE programStatement
    (26) structureElse -> . ELSE programBlock

    ;               reduce using rule 14 (statement -> structureIf .)
    NEWLINE         reduce using rule 14 (statement -> structureIf .)
    ELSE            shift and go to state 40

    structureElse                  shift and go to state 39

state 7

    (15) statement -> structureTernary .

    ;               reduce using rule 15 (statement -> structureTernary .)
    NEWLINE         reduce using rule 15 (statement -> structureTernary .)


state 8

    (16) statement -> logStatement .

    ;               reduce using rule 16 (statement -> logStatement .)
    NEWLINE         reduce using rule 16 (statement -> logStatement .)


state 9

    (17) statement -> breakStatement .

    ;               reduce using rule 17 (statement -> breakStatement .)
    NEWLINE         reduce using rule 17 (statement -> breakStatement .)


state 10

    (18) statement -> continueStatement .

    ;               reduce using rule 18 (statement -> continueStatement .)
    NEWLINE         reduce using rule 18 (statement -> continueStatement .)


state 11

    (19) statement -> functionDeclaration .

    ;               reduce using rule 19 (statement -> functionDeclaration .)
    NEWLINE         reduce using rule 19 (statement -> functionDeclaration .)


state 12

    (20) statement -> functionCall .

    ;               reduce using rule 20 (statement -> functionCall .)
    NEWLINE         reduce using rule 20 (statement -> functionCall .)


state 13

    (21) statement -> returnStatement .

    ;               reduce using rule 21 (statement -> returnStatement .)
    NEWLINE         reduce using rule 21 (statement -> returnStatement .)


state 14

    (22) statement -> varList .
    (82) assignation -> varList . = returnValues
    (83) assignation -> varList . = structureTernary
    (62) varList -> varList . , IDENTIFIER

    ;               reduce using rule 22 (statement -> varList .)
    NEWLINE         reduce using rule 22 (statement -> varList .)
    =               shift and go to state 41
    ,               shift and go to state 42


state 15
